[package]
name = "bitap"
version = "0.2.0"
authors = ["Alex Guerra <alex@heyimalex.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"
description = "Bitap implementation in rust."
homepage = "https://github.com/heyimalex/bitap"
repository = "https://github.com/heyimalex/bitap"
keywords = ["bitap", "fuzzy", "search"]

[dev-dependencies]
bitap-reference = { path = "./bitap-reference", version = "0.2.0" }
quickcheck = "0.8"
quickcheck_macros = "0.8"
criterion = "0.2"
lazy_static = "1.3.0"

[[bench]]
name = "bitap_benchmark"
harness = false
