[package]
name = "bitap-reference"
version = "0.1.0"
authors = ["Alex Guerra <alex@heyimalex.com>"]
edition = "2018"

license = "MIT"
description = "Reference functions for the bitap crate"
homepage = "https://github.com/heyimalex/bitap"
repository = "https://github.com/heyimalex/bitap"

[dependencies]
strsim = "0.9.2"
colored = "1.8"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
